--- a/_config.yml
+++ b/_config.yml
@@ -1,29 +1,29 @@
 # Jekyll configuration
 
-name: Blog Name
-description: Software Developer
+name: sckaiser_home
+description: quantum optics and information
 
 # Url is currently only used only for the RSS feed in feed.xml
-url: http://streetturtle.github.io
+url: http://crazy4pi314.github.io
 #url: http://localhost:4000
 
 # For a project page here should be a project name. Otherwise (for user's/organizaion's page leave it empty)
-baseurl: '/jekyll-clean-dark'
+baseurl: '/sckaiser_home'
 
 social:
-  github: streetturtle
+  github: crazy4pi314
 
 # Google Analytics key, leave blank to ignore
-google_analytics_key:
+#google_analytics_key:
 # Yandex metrika (https://metrica.yandex.com/) leave blanc to ignore or put true to use
-yandex_metrika:
+#yandex_metrika:
 
 
 # Set this to your disqus shortname to enable comments. Note that the 'comments'
 # setting below must also be true. Individual posts can override 'comments' to
 # disable on a post-by-post basis
-disqus: streetturtle
-comments: true
+#disqus: streetturtle
+#comments: true
 
 permalink: /:year/:month/:title
 paginate: 3
