--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ social:
 permalink: /:year/:month/:title
 paginate: 3
 
-highlighter: pygments
+highlighter: rouge
 markdown: kramdown
 redcarpet:
   extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data"]
