updated CV and tagline

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ permalink:        pretty
 # Setup
 title:            sckaiser
 tagline:          'homepage'
-description:      'Quantum. Lasers. Space.'
+description:      'Quantum. Lasers. Diamonds.'
 url:              http://sckaiser.com
 baseurl:          /
 
