--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ gems: [jekyll-paginate]
 # Permalinks
 permalink:        pretty
 #relative_permalinks: true
+plugins: [jekyll-paginate]
 
 # Setup
 title:            sckaiser
@@ -37,3 +38,5 @@ paginate: 5
 paginate_path: "/blog/page:num/"
 
 exclude: ["*.ipynb"]
+
+ga_analytics: UA-168719669-1
