--- a/.github/workflows/build-site.yml
+++ b/.github/workflows/build-site.yml
@@ -22,8 +22,15 @@ jobs:
           npm i --package-lock-only
           npm ci
           npm run build
-      - name: Publish site
-        uses: peaceiris/actions-gh-pages@v3
+            - name: Upload artifact
+      - uses: actions/upload-pages-artifact@v1
         with:
-          publish_dir: ./_site
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          path: './_site'
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v1
+#       - name: Publish site
+#         uses: peaceiris/actions-gh-pages@v3
+#         with:
+#           publish_dir: ./_site
+#           github_token: ${{ secrets.GITHUB_TOKEN }}
