--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "clean-css": "^4.2.1",
     "eleventy-plugin-unfurl": "^0.0.6",
     "html-minifier": "^4.0.0",
+    "reveal.js": "^4.4.0",
     "uglify-es": "^3.3.9"
   }
 }
